# synacor_challenge

./: Cargo.toml  README.md  disassembled.asm  inputs.txt
files/: arch-spec  disassembled.asm  game_output.txt  inputs.txt
inputs/: after_coins.txt  coin_order.txt  fetch_coins.txt
src/: cpu.rs  main.rs  solve_coins.rs
