[package]
name = "synacor_challenge"
version = "1.0.0"
authors = ["Axel Lindeberg <axel.ew.lindeberg@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
easy_io = "0.3.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "cpu"
path = "src/cpu.rs"
